# runr

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md
kernel/: Dockerfile  Makefile
src/: main.rs
src/cli/: Cargo.toml
src/cli/src/: lib.rs
src/image/src/: create_rootfs.sh  lib.rs  main.rs  pull_docker_image.sh
src/kernel/: Dockerfile  Makefile
