[package]
name = "runr"
version = "0.1.0"
edition = "2018"

[dependencies]
vmm = { git = "https://github.com/m-bocelli/rust-vmm.git" }
cli = { path = "src/cli" }
image = { path = "src/image" }

[workspace]
members = [ "src/*" ]

[patch.crates-io]
linux-loader = { git = "https://github.com/rust-vmm/linux-loader.git", rev = "9a9f071" }
